# DiscoveringModernCplusplusExercises

./: .gitignore  CMakeLists.txt
ch2/: CMakeLists.txt
ch2/2.8.1/: CMakeLists.txt  poly.cpp
ch2/2.8.2/: CMakeLists.txt  poly2.cpp
ch2/2.8.3/: CMakeLists.txt  poly3.cpp.cpp
ch3/: CMakeLists.txt
ch3/3.11.1/: CMakeLists.txt  stringrep.cpp
ch3/3.11.10/: CMakeLists.txt  trapezoid.cpp
ch3/3.11.12/: CMakeLists.txt  lambdaTrap.cpp
ch3/3.11.2/: CMakeLists.txt  stringTuple.cpp
ch3/3.11.3/: CMakeLists.txt  stackImp.cpp  stacker.h
ch3/3.11.4/: CMakeLists.txt  vector.cpp
ch3/3.11.5/: CMakeLists.txt  odditr.cpp
ch3/3.11.6/: CMakeLists.txt  odditr.h  oddrange.cpp
ch3/3.11.8/: CMakeLists.txt  sizeStack.cpp
ch3/3.11.9/: CMakeLists.txt  template.cpp
ch4/: CMakeLists.txt
ch4/4.8.1/: CMakeLists.txt
ch4/4.8.11/: CMakeLists.txt  magnitude.cpp
ch4/4.8.2/: CMakeLists.txt  phonenumbers.cpp
randomOutput/: CMakeLists.txt  ran2.3.cpp  ran2.4.cpp
