add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3.11.1")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3.11.2")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3.11.3")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3.11.4")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3.11.5")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3.11.6")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3.11.7")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3.11.8")
set_target_properties(ex3.11.1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/output/ch3")